@@ -19,6 +19,8 @@ remove = warnings
 remove = File::Temp
 remove = Getopt::Long
 remove = Pod::Usage
+remove = File::Spec
+remove = File::Basename
 
 ; comes with File::HomeDir
 remove = File::HomeDir::Test
