@@ -1,3 +1,4 @@
+Archive::Extract
 BackPAN::Index
 Capture::Tiny
 File::Copy::Recursive
