@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - make multiple tags a warning only
+  - install with Module::Build instead of MakeMaker
+  - use Archive::Extract instead of tar
 
 0.07      2013-10-18 12:41:40 -0400
   - make git 1.5.0 or better a requirement
